# esp-aws-yolo

./: .gitignore  CMakeLists.txt  Kconfig  sdkconfig  sdkconfig.old
App/: CMakeLists.txt  app_task_table.c  helloworld_task.c
App/Communication/wifi_connect/: CMakeLists.txt  wifi_softap_task.c  wifi_softap_task.h
App/Control/display_output/: CMakeLists.txt  display_task.c  display_task.h
App/include/: helloworld_task.h
App/task_manager/: CMakeLists.txt  app_task_table.c
Driver/esp32s3/esp32_lcd/: CMakeLists.txt
MiddleWare/Core/: CMakeLists.txt  task_manager.c
MiddleWare/Core/include/: task_entry.h  task_manager.h
MiddleWare/HAL_Driver/: CMakeLists.txt
MiddleWare/HAL_Driver/hal_camera/: CMakeLists.txt  Kconfig
MiddleWare/HAL_Driver/include/: camera_config_table.h  camera_hal.h
MiddleWare/HAL_Driver/src/: camera_hal.c  i2c_hal.c
MiddleWare/Interface/: CMakeLists.txt
MiddleWare/Interface/include/: display_output.h
MiddleWare/Interface/src/: display_output.c
MiddleWare/Network/web_server/: CMakeLists.txt
MiddleWare/Utils/: CMakeLists.txt  Kconfig
MiddleWare/Utils/include/: esp32_spiffs.h
MiddleWare/Utils/src/: esp32_spiffs.c
doc(chinese)/: 01项目总览.md  02系统功能实现与关键模块.md  02系统模块设计.md
doc(chinese)/01_系统设计（System_Architecture）/: 01_系统架构总览.md  02_ESP32-S3模块系统设计.md  02_ESP32-S3系统模块设计.md  03_ESP32-C2系统模块设计.md  04_AWS云端模块系统设计.md
doc(chinese)/02_详细设计（Module_Implementation）/: 01_ESP32-S3模块详细设计.md  03_AWS模块详细设计.md
doc(chinese)/03_代码设计（Code_Design）/: 01_ESP32-S3代码设计.md  tmp.md
main/: CMakeLists.txt  main.c
(+10 files in other folders)
